Create today page

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
             <li class="nav__select__item">Курс</li>
         </ul>
         <ul class="nav__menu">
-            <li class="nav__menu__item">Сьогодні</li>
+            <a href="today.html"><li class="nav__menu__item">Сьогодні</li></a>
             <li class="nav__menu__item">Тиждень</li>
             <li class="nav__menu__item">Місяць</li>
         </ul>
