--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
             </select>
         </div>
         <ul class="nav__menu">
-            <li class="nav__menu__item">Сьогодні</li>
+            <a href="today.html"><li class="nav__menu__item">Сьогодні</li></a>
             <li class="nav__menu__item">Тиждень</li>
             <li class="nav__menu__item">Місяць</li>
         </ul>
