--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/style.scss">
+    <link rel="stylesheet" href="style/month.scss">
+
 </head>
 <body>
     <header class="header">
