--- a/src/index.html
+++ b/src/index.html
@@ -44,8 +44,8 @@
         </div>
         <ul class="nav__menu">
             <a href="today.html"><li class="nav__menu__item">Сьогодні</li></a>
-            <li class="nav__menu__item">Тиждень</li>
-            <li class="nav__menu__item">Місяць</li>
+            <a href="week.html"><li class="nav__menu__item">Тиждень</li></a>
+            <a href="month.html"><li class="nav__menu__item">Місяць</li></a>
         </ul>
     </section>
 </body>
