--- a/src/month.html
+++ b/src/month.html
@@ -79,7 +79,7 @@
             <div class="today__title">
                 Понеділок, 14 жовтня 2021 року 
             </div>
-            <div class="today__container">
+            <div class="today__container today__container--month">
                 <div class="today__container__item">
                     <div class="today__container__time">
                         9:00 - 10:20
