Add dist and .cache to gitignore

--- a/src/today.html
+++ b/src/today.html
@@ -43,9 +43,9 @@
             </select>
         </div>
         <ul class="nav__menu">
-            <li class="nav__menu__item">Сьогодні</li>
-            <li class="nav__menu__item">Тиждень</li>
-            <li class="nav__menu__item">Місяць</li>
+            <a href="today.html"><li class="nav__menu__item">Сьогодні</li></a>
+            <a href="week.html"><li class="nav__menu__item">Тиждень</li></a>
+            <a href="month.html"><li class="nav__menu__item">Місяць</li></a>
         </ul>
     </section>
 
