--- a/src/week.html
+++ b/src/week.html
@@ -46,10 +46,11 @@
         </div>
         <ul class="nav__menu">
             <a href="today.html"><li class="nav__menu__item">Сьогодні</li></a>
-            <li class="nav__menu__item">Тиждень</li>
-            <li class="nav__menu__item">Місяць</li>
+            <a href="week.html"><li class="nav__menu__item">Тиждень</li></a>
+            <a href="month.html"><li class="nav__menu__item">Місяць</li></a>
         </ul>
     </section>
+
     <section class="week__days">
         <h1>МІТ-11</h1>
         <div class="current__days">
