--- a/src/month.html
+++ b/src/month.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/month.scss">
+    <link rel="stylesheet" href="style/style.scss">
     <title>Month</title>
 </head>
 <body>
@@ -12,15 +12,37 @@
         <img src="img/img-banner.png" alt="" class="header__banner">
     </header>
     <section class="nav">
-        <ul class="nav__select">
-            <li class="nav__select__item">Кафедра</li>
-            <li class="nav__select__item">Група</li>
-            <li class="nav__select__item">Курс</li>
-        </ul>
+        <div class="nav__select">
+            <select class="nav__select__item">
+                <option value="" disabled selected>Кафедра</option>
+                <option value="КМІТ">КМІТ</option>
+                <option value="КПІС">КПІС</option>
+                <option value="КПСТ">КПСТ</option>
+                <option value="КБЗІ">КБЗІ</option>
+                <option value="КІСТ">КІСТ</option>
+            </select>
+            <select class="nav__select__item">
+                <option value="" disabled selected>Група</option>
+                <option value="МІТ">МІТ</option>
+                <option value="ПП">ПП</option>
+                <option value="УІС">УІС</option>
+                <option value="ІБЗ">КБЗІ</option>
+                <option value="КН">КН</option>
+            </select>
+            <select class="nav__select__item">
+                <option value="" disabled selected>Курс</option>
+                <option value="1">1 курс</option>
+                <option value="2">2 курс</option>
+                <option value="3">3 курс</option>
+                <option value="4">4 курс</option>
+                <option value="5">5 курс</option>
+                <option value="6">6 курс</option>
+            </select>
+        </div>
         <ul class="nav__menu">
-            <li class="nav__menu__item">Сьогодні</li>
-            <li class="nav__menu__item">Тиждень</li>
-            <li class="nav__menu__item">Місяць</li>
+            <a href="today.html"><li class="nav__menu__item">Сьогодні</li></a>
+            <a href="week.html"><li class="nav__menu__item">Тиждень</li></a>
+            <a href="month.html"><li class="nav__menu__item">Місяць</li></a>
         </ul>
     </section>
 
