Update a home page in index.html and style.scss

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Розклад занять</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ruda:wght@400;500;700;900&display=swap" rel="stylesheet">
@@ -32,6 +32,12 @@
             <li><a href="week.html" class="nav__menu__item">Тиждень</a></li>
             <li><a href="month.html" class="nav__menu__item">Місяць</a></li>
         </ul>
+    </section>
+    <section class="no-group">
+        <section class="no-group__content">
+            <p class="no-group__text">Будь ласка, оберіть групу для відображення розкладу</p>
+            <img src="../src/img/group.png" alt="" class="no_group__icon">
+        </section>
     </section>
 </body>
 </html>
