Today page html+scss

--- a/src/today.html
+++ b/src/today.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ruda:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/today.scss">
 </head>
+
 <body>
     <header class="header">
         <div class="header__title">
@@ -35,112 +37,129 @@
 
     <section class="today">
         <div class="today__title">
-            Понеділок, 14 жовтня 2021 року 
+            <div class="today__title__date">14 жовтня</div>
+            <div class="today__title__day">Понеділок</div>
         </div>
         <div class="today__container">
             <div class="today__container__item">
                 <div class="today__container__time">
-                    9:00 - 10:20
+                </div>
+                <div class="today__container__subgroup today__container__subgroup__title">1 підгрупа</div>
+                <div class="today__container__subgroup today__container__subgroup__title">2 підгрупа</div>
+            </div>
+            <div class="today__container__item">
+                <div class="today__container__time">
+                    9:00<br>-<br>10:20
                 </div>
                 <div class="today__container__subgroup">
-                </div>
-                <div class="today__container__subgroup">
-                    <p class="today__container__subgroup__title">
-                        Основи програмування
+                    <p class="today__container__subgroup__subject">
+                        Вища математика
                     </p>
                     <p class="today__container__subgroup__type">
                         Практика
                     </p>
                     <p class="today__container__subgroup__professor">
-                        Герасименко О. Ю.
+                        Дахно Н. Б.
                     </p>
                     <p class="today__container__subgroup__place">
                         309 ауд.
                     </p>
                 </div>
+                <hr class="today__container__subgroup--vertical-line">
+                <div class="today__container__subgroup">
+                    <hr class="today__container__subgroup--horizontal-line">
+                </div>
             </div>
             <div class="today__container__item">
                 <div class="today__container__time">
-                    10:30 - 11:50
+                    10:30<br>-<br>11:50
                 </div>
-                <div class="today__container__subgroup today__container__subgroup--full">
-                    <p class="today__container__subgroup__title">
-                        Основи програмування
+                <div
+                    class="today__container__subgroup today__container__subgroup--full today__container__subgroup--changedcolor">
+                    <p class="today__container__subgroup__subject">
+                        Вступ до фаху
                     </p>
                     <p class="today__container__subgroup__type">
                         Лекція
                     </p>
                     <p class="today__container__subgroup__professor">
-                        Лещенко О. О.
+                        проф. Кравченко Ю. В.
                     </p>
                     <p class="today__container__subgroup__place">
                         <a class="today__container__subgroup__link"
-                           href="https://us02web.zoom.us/j/82670578730?pwd=V0FpM2c3RFZqODY0Y1Y1Tng2MWJ0UT09">
-                           Посилання
+                            href="https://us02web.zoom.us/j/82670578730?pwd=V0FpM2c3RFZqODY0Y1Y1Tng2MWJ0UT09">
+                            Посилання >
                         </a>
                     </p>
                 </div>
             </div>
             <div class="today__container__item">
                 <div class="today__container__time">
-                    12:10 - 13:30
+                    12:10<br>-<br>13:30
                 </div>
                 <div class="today__container__subgroup">
-                    <p class="today__container__subgroup__title">
-                        Основи програмування
+                    <p class="today__container__subgroup__subject">
+                        Вступ до фаху
                     </p>
                     <p class="today__container__subgroup__type">
                         Практика
                     </p>
                     <p class="today__container__subgroup__professor">
-                        Лещенко О. О.
+                        проф. Кравченко Ю. В.
                     </p>
                     <p class="today__container__subgroup__place">
                         <a class="today__container__subgroup__link"
-                           href="https://us02web.zoom.us/j/82670578730?pwd=V0FpM2c3RFZqODY0Y1Y1Tng2MWJ0UT09">
-                            Посилання
+                            href="https://us02web.zoom.us/j/82670578730?pwd=V0FpM2c3RFZqODY0Y1Y1Tng2MWJ0UT09">
+                            Посилання >
                         </a>
                     </p>
                 </div>
                 <div class="today__container__subgroup">
-                    <p class="today__container__subgroup__title">
-                        Англійська мова
+                    <p class="today__container__subgroup__subject">
+                        Вища математика
                     </p>
                     <p class="today__container__subgroup__type">
                         Практика
                     </p>
                     <p class="today__container__subgroup__professor">
-                        Загреб Д. Л.
+                        Дахно Н. Б.
                     </p>
                     <p class="today__container__subgroup__place">
-                        305 ауд.
+                        <a class="today__container__subgroup__link"
+                            href="https://us02web.zoom.us/j/82670578730?pwd=V0FpM2c3RFZqODY0Y1Y1Tng2MWJ0UT09">
+                            Посилання >
+                        </a>
                     </p>
                 </div>
             </div>
             <div class="today__container__item">
                 <div class="today__container__time">
-                    13:40 - 15:00
+                    13:40<br>-<br>15:00
                 </div>
-                <div class="today__container__subgroup today__container__subgroup--full">
-                    <p class="today__container__subgroup__title">
-                        Вступ до університетських студій
+                <div class="today__container__subgroup today__container__subgroup--changedcolor">
+                    <hr class="today__container__subgroup--horizontal-line">
+                </div>
+                <hr class="today__container__subgroup--vertical-line">
+                <div class="today__container__subgroup today__container__subgroup--changedcolor">
+                    <p class="today__container__subgroup__subject">
+                        Вступ до фаху
                     </p>
                     <p class="today__container__subgroup__type">
-                        Лекція
+                        Практика
                     </p>
                     <p class="today__container__subgroup__professor">
-                        Левінець Р. П.
+                        проф. Кравченко Ю. В.
                     </p>
                     <p class="today__container__subgroup__place">
                         <a class="today__container__subgroup__link"
-                           href="https://meet.google.com/sxt-mpqq-oot">
-                            Посилання
+                            href="https://us02web.zoom.us/j/82670578730?pwd=V0FpM2c3RFZqODY0Y1Y1Tng2MWJ0UT09">
+                            Посилання >
                         </a>
                     </p>
                 </div>
             </div>
-        </div>
     </section>
-    
+
 </body>
+
 </html>
