Change today to fit full height

--- a/src/today.html
+++ b/src/today.html
@@ -41,11 +41,11 @@
             <div class="today__title__day">Понеділок</div>
         </div>
         <div class="today__container">
-            <div class="today__container__item">
+            <div class="today__container__item today__container__item--subgroups">
                 <div class="today__container__time">
                 </div>
-                <div class="today__container__subgroup today__container__subgroup__title">1 підгрупа</div>
-                <div class="today__container__subgroup today__container__subgroup__title">2 підгрупа</div>
+                <div class="today__container__subgroup__title">1 підгрупа</div>
+                <div class="today__container__subgroup__title">2 підгрупа</div>
             </div>
             <div class="today__container__item">
                 <div class="today__container__time">
@@ -65,7 +65,7 @@
                         309 ауд.
                     </p>
                 </div>
-                <hr class="today__container__subgroup--vertical-line">
+                <hr class="today__container__subgroup--vertical-line today__container__subgroup--vertical-line--red">
                 <div class="today__container__subgroup">
                     <hr class="today__container__subgroup--horizontal-line">
                 </div>
@@ -114,6 +114,7 @@
                         </a>
                     </p>
                 </div>
+                <hr class="today__container__subgroup--vertical-line today__container__subgroup--vertical-line--red">
                 <div class="today__container__subgroup">
                     <p class="today__container__subgroup__subject">
                         Вища математика
