--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ruda:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/style.scss">
 </head>
+
 <body>
     <!--No group page-->
     <header class="header">
@@ -24,7 +26,7 @@
                 </p>
             </div>
         </div>
-        <button class="header__button">Обрати групу</button>
+        <button class="header__button" id="open_pop_up">Обрати групу</button>
     </header>
     <section class="nav">
         <ul class="nav__menu">
@@ -33,11 +35,52 @@
             <li><a href="month.html" class="nav__menu__item">Місяць</a></li>
         </ul>
     </section>
-    <section class="no-group">
+    <section class="no-group" id="no-group">
         <section class="no-group__content">
             <p class="no-group__text">Будь ласка, оберіть групу для відображення розкладу</p>
             <img src="../src/img/group.png" alt="" class="no_group__icon">
         </section>
     </section>
+    <section class="pop-up" id="pop_up"> 
+        <div class="pop-up__header">
+            <p class="pop-up__header__title">Оберіть групу</p>
+            <button class="pop-up__header__close-button" id="close_pop_up">&#10006;</button>
+        </div>
+        <div class="pop-up__body">
+            <div class="select">
+                <select name="select-cathedra" id="select-cathedra">
+                    <option selected disabled>Оберіть кафедру</option>
+                    <option value="">Програмних систем і технологій</option>
+                    <option value="">Інтелектуальних технологій</option>
+                    <option value="">Прикладних інформаційних систем</option>
+                    <option value="">Технологій управління</option>
+                    <option value="">Кібербезпеки та захисту інформації</option>
+                    <option value="">Інформаційні системи та технології</option>
+                    <option value="">Мережевих та інтернет технологій</option>
+                </select>
+            </div>
+            <div class="select">
+                <select name="select-year-of-study" id="select-year-of-study">
+                    <option selected disabled>Оберіть курс</option>
+                    <option value="">1 курс</option>
+                    <option value="">2 курс</option>
+                    <option value="">3 курс</option>
+                    <option value="">4 курс</option>
+                </select>
+            </div>
+            <div class="select">
+                <select name="select-group" id="select-group">
+                    <option selected disabled>Оберіть групу</option>
+                    <option value="">МІТ-11</option>
+                    <option value="">МІТ-21</option>
+                    <option value="">МІТ-31</option>
+                    <option value="">МІТ-41</option>
+                </select>
+            </div>
+            <button class="pop-up__body__button">Пошук</button>
+        </div>
+    </section>
+    <script src="js/pop-up.js"></script>
 </body>
+
 </html>
