Add js to today

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
         </div>
         <button class="header__button" id="open_pop_up">Обрати групу</button>
     </header>
-    <section class="nav">
+    <section class="nav" style="display: none;">
         <ul class="nav__menu">
             <li><a href="today.html" class="nav__menu__item nav__menu__item--active">Сьогодні</a></li>
             <li><a href="week.html" class="nav__menu__item">Тиждень</a></li>
