Add js to month

--- a/src/month.html
+++ b/src/month.html
@@ -39,6 +39,9 @@
         <div class="month__schedule" id="month-schedule">
         </div>
     </section>
+
+    <div class="month__popup" id="month-popup">
+    </div>
 </body>
 
 <script src="js/month.js"></script>
