--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,9 @@
     <!--No group page-->
     <header class="header">
         <div class="header__title">
-            <img src="img/logo.png" alt="Logo" class="header__logo">
+            <a href="index.html">
+                <img src="img/logo.png" alt="Logo" class="header__logo">
+            </a>
             <div class="header__container">
                 <p class="header__main-text">
                     Факультет інформаційних технологій
@@ -71,13 +73,13 @@
             <div class="select">
                 <select name="select-group" id="select-group">
                     <option selected disabled>Оберіть групу</option>
-                    <option value="">МІТ-11</option>
-                    <option value="">МІТ-21</option>
-                    <option value="">МІТ-31</option>
-                    <option value="">МІТ-41</option>
+                    <option value="mit-11">МІТ-11</option>
+                    <option value="mit-21">МІТ-21</option>
+                    <option value="mit-31">МІТ-31</option>
+                    <option value="mit-41">МІТ-41</option>
                 </select>
             </div>
-            <button class="pop-up__body__button">Пошук</button>
+            <button class="pop-up__body__button" id="pop-up-get-group">Пошук</button>
         </div>
     </section>
     <script src="js/pop-up.js"></script>
