--- a/src/month.html
+++ b/src/month.html
@@ -13,7 +13,9 @@
 <body>
     <header class="header">
         <div class="header__title">
-            <img src="img/logo.png" alt="Logo" class="header__logo">
+            <a href="index.html">
+                <img src="img/logo.png" alt="Logo" class="header__logo">
+            </a>
             <div class="header__container">
                 <p class="header__main-text">
                     Факультет інформаційних технологій
@@ -23,7 +25,7 @@
                 </p>
             </div>
         </div>
-        <button class="header__button">МІТ-11</button>
+        <button class="header__button"></button>
     </header>
     <section class="nav">
         <ul class="nav__menu">
